# knot-hal-source

./: Makefile.am  configure.ac
include/: comm.h  nrf24.h
nrf/: main.c
src/: Makefile.am  avr_errno.h  avr_unistd.h  comm_nrf24l01.c  comm_private.h  list.h  nrf24l01-mac.h  nrf24l01_driver_linux.c  nrf24l01_net.h  phy_driver.h  util.c  util.h
src/drivers/: phy_driver.c  phy_driver.h  phy_driver_nrf24.c  phy_driver_nrf24.h
src/hal/comm/: Makefile.am  comm_nrf24l01.c  comm_private.h  nrf24l01_ll.h
src/hal/log/: Makefile.am
src/hal/storage/: Makefile.am
src/hal/time/: Makefile.am  time_linux.c
src/nrf24l01/: Makefile.am  nrf24l01.c  nrf24l01.h  nrf24l01_client.c  nrf24l01_client.h  nrf24l01_io.h  nrf24l01_ll.h  nrf24l01_server.c  nrf24l01_server.h
src/nrfd/: manager.c
src/phyemud/: main.c  manager.c  manager.h
src/phynrfd/: main.c  manager.c
src/spi/: spi.h  spi_arduino.c  spi_linux.c
tools/: phyd_test.c  rpiecho.c  rwtest.c
